Configured token to come form secrets

--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -12,6 +12,6 @@ jobs:
       - uses: actions/checkout@v2
       - uses: helaili/jekyll-action@v2
         with:
-          token: $JEKYLL_TOKEN
+          token: ${{ secrets.JEKYLL_TOKEN }}
           target_branch: gh-pages
 
